--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
         <main id="main">
             <h1 id="title">Muhammad Ali</h1>
             <p>He was one of the first professional athletes to put politics before sports</p>
+            <figure id="img-div">
+                <img id="image" src="https://hips.hearstapps.com/hmg-prod/images/muhammad_ali_1996_olympic_opening_ceremony_michael_cooper_getty_images_225121.jpg?crop=1.00xw:0.935xh;0,0.0252xh&resize=980:*" alt="Muhammad Ali">
+                <figcaption id="img-caption">
+                    "Muhammad Ali holds the torch before lighting the Olympic Flame during the opening ceremony of the Centennial Olympic Games in Atlanta on July 19, 1996."
+                </figcaption>
+            </figure>
+            <section>
+                <h3 id="headline">The time line of Muhammad Ali life:</h3>
+                <ul>
+                    <li>
+                        <strong>1942</strong>
+                        "-Born in Louisville, Kentucky, United States"
+                    </li>
+                </ul>
+            </section>
         </main>
 
     </body>
