Mhmmad ali life time addd

--- a/index.html
+++ b/index.html
@@ -19,8 +19,111 @@
                 <h3 id="headline">The time line of Muhammad Ali life:</h3>
                 <ul>
                     <li>
-                        <strong>1942</strong>
-                        "-Born in Louisville, Kentucky, United States"
+                        <strong>1942 - </strong>
+                        <strong>BORN CASSIUS CLAY, JR.</strong><br>
+                        Born in Louisville, Kentucky, United States
+                    </li>
+                    <li>
+                        <strong>1954 - </strong>
+                        <strong>RED BIKE MOMENT</strong><br>
+                        The red Schwinn bike of twelve-year-old Muhammad Ali (then Cassius Clay, Jr.) is stolen
+                        outside the annual Louisville Home Show. Reporting the theft to nearby policeman Joe
+                        Martin, he expresses a desire to “whup” the culprit. Martin—who trains young
+                        boxers—suggests he should first learn how to fight.
+                    </li>
+                    <li>
+                        <strong>1957 - </strong>
+                        <strong>ENTERS CENTRAL HIGH SCHOOL</strong><br>
+                        Cassius struggles academically (he was later diagnosed with dyslexia) but becomes a
+school celebrity for his dedication to training, including running to school every day
+alongside the bus. He would visit the school as a hero after the Rome Olympic Games and
+his legacy remains a point of Central pride.
+                    </li>
+                    <li>
+                        <strong>1960 - </strong>
+                        <strong>WINS OLYMPIC GOLD MEDAL</strong><br>
+                        hree months out of high school, Ali competes at the 1960
+Summer Olympics in Rome. Despite being afraid of
+airplanes, Ali boards the flight while wearing an army
+surplus parachute. He wins the light-heavyweight gold
+medal, defeating Zbigniew Pietrzykowski of Poland.
+                    </li>
+                    <li>
+                        <strong>1960 - </strong>
+                        <strong>SIGNS WITH LOUISVILLE SPONSORING GROUP</strong><br>
+                        At age 18, Clay enters a contract with a group of Louisville-area businessmen who will
+finance his professional boxing career. Clay is represented by Alberta O. Jones, who
+influenced his future philanthropic efforts. Clay would later donate the winnings of his
+first professional fight to Kosair Children's Hospital.
+                    </li>
+                    <li>
+                        <strong>1962 - </strong>
+                        <strong>MEETS MALCOLM X</strong><br>
+                        Clay’s early boxing years are also formative ones in his spiritual journeys, headlined by
+meeting Malcolm X in Detroit in 1962, and Drew Bundini Brown in the spring of 1963.
+Training with Angelo Dundee at 5th Street Gym in Miami, Cassius is poised for the next
+level, carrying 19 straight wins into his first shot at the heavyweight championship.
+                    </li>
+                    <li>
+                        <strong>1964 - </strong>
+                        <strong>CLAY VS. SONNY LISTON (I)</strong><br>
+                        In his first heavyweight title bout, Ali is a longshot to defeat
+Liston, widely seen as unstoppable. Nonetheless, Ali
+predicts “a total eclipse of the Sonny”—and indeed Liston
+does not rise to the seventh round’s opening bell. “I’m the
+greatest! I shook up the world!”
+Win - Technical Knockout in 6 rounds [Miami Beach]
+                    </li>
+                    <li>
+                        <strong>1964 - </strong>
+                        <strong>ANNOUNCES CONVERSION TO ISLAM, NAME CHANGE</strong><br>
+                        The day after winning his first heavyweight belt, the fighter announces he is a proud
+Muslim. He goes by the name Cassius X for nine days, then receives the new name of
+Muhammad Ali from Nation of Islam leader Elijah Muhammad.
+                    </li>
+                    <li>
+                        <strong>1964 - </strong>
+                        <strong>FIRST VISIT TO AFRICA</strong><br>
+                        Visiting Ghana, Nigeria, and Egypt, Ali inspires as a symbol of anti-colonialism. Welcomed
+in Ghana as a son of Africa and a hero, Ali reclaims his roots by saying “I am an African.” At
+the pyramids in Cairo, the BBC reports he “fuse[s] politics and religion” when giving the
+Black power salute and shouting ‘God is great’ in Arabic.
+                    </li>
+                    <li>
+                        <strong>1967 - </strong>
+                        <strong>REFUSES MILITARY DRAFT IN HOUSTON</strong><br>
+                        Ali twice refuses to step forward when military induction officials call his name, citing his
+conscientious objection to the war in Vietnam as a minister in the non-violent religion of
+Islam. Convicted of draft evasion, he is stripped of his heavyweight title and boxing
+licenses.
+                    </li>
+                    <li>
+                        <strong>1967 - </strong>
+                        <strong>RALLIES WITH MARTIN LUTHER KING, JR. IN LOUISVILLE</strong><br>
+                        Ali joins Martin Luther King, Jr. in Louisville at a rally for fair housing practices. The open
+housing demonstrations had protesters calling for a boycott of the Kentucky Derby on
+the same day, where members of the Ku Klux Klan offered to help keep order. City police
+and Churchill Downs refused.
+The two men fought for civil rights but shared different ideals, with King declining the
+views of the Nation of Islam on integration.
+                    </li>
+                    <li>
+                        <strong>1970 - </strong>
+                        <strong>ALI VS. JERRY QUARRY: FIRST POST-EXILE FIGHT</strong><br>
+                        This fight was not approved by Georgia governor Lester Maddox, a segregationist who
+declared a “day of mourning” over it. However, only Atlanta Mayor Sam Massell’s approval
+was necessary, secured through the efforts of State Senator Leroy Johnson. Ali previewed
+the fight in a drawing to Leroy Nieman, where Maddox is drawn running down the back
+right aisle, yelling "Stop that fight!"
+                    </li>
+                    <li>
+                        <strong>1971 - </strong>
+                        <strong>ALI VS. JOE FRAZIER (I)</strong><br>
+In a chance to reclaim his title, Ali’s first heavyweight fight with Frazier matched two
+undefeated fighters. However, Ali’s three years away from the ring made the difference in
+a grueling 15 rounds. It is Ali’s first defeat and the start of the greatest rivalry in boxing
+history.
+Loss - Unanimous Decision in 15 rounds [New York City]
                     </li>
                 </ul>
             </section>
