--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head lang="en">
-        <meta charset="utf-8">
+    <head>
+        
+        <meta charset= "UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
         <link rel="stylessheet" href="styles.css" />
-        <title>Muhammad Ali</title>
     </head>
     <body>
         <main id="main">
             <h1 id="title">Muhammad Ali</h1>
             <p>He was one of the first professional athletes to put politics before sports</p>
             <figure id="img-div">
-                <img id="image" src="https://hips.hearstapps.com/hmg-prod/images/muhammad_ali_1996_olympic_opening_ceremony_michael_cooper_getty_images_225121.jpg?crop=1.00xw:0.935xh;0,0.0252xh&resize=980:*" alt="Muhammad Ali">
+                <img id="image" src="/Users/snoorsalihi/Desktop/FullStack/Tribute-Muhammad-Ali/muhammad.jpg">
                 <figcaption id="img-caption">
                     "Muhammad Ali holds the torch before lighting the Olympic Flame during the opening ceremony of the Centennial Olympic Games in Atlanta on July 19, 1996."
                 </figcaption>
@@ -125,7 +126,138 @@ a grueling 15 rounds. It is Ali’s first defeat and the start of the greatest r
 history.
 Loss - Unanimous Decision in 15 rounds [New York City]
                     </li>
+                    <li>
+                        <strong>1972 - </strong>
+                        <strong>MAKES FIRST PILGRIMAGE TO MECCA - HAJJ</strong><br>
+                        With his passport returned by the Supreme Court decision, Ali travels to Saudi Arabia to
+perform Hajj for the first time. Ali observes ihrām—a sacred state of cleansing and
+attire—as he approaches Mecca. While there, Ali also meets with the royal family.
+                    </li>
+                    <li>
+                        <strong>1974 - </strong>
+                        <strong>ALI VS. JOE FRAZIER (II) - SUPER FIGHT II</strong><br>
+                        Although Joe Frazier no longer held the title of Heavyweight Champion, Muhammad Ali
+wanted to face him again to prove he was indeed “the Greatest.” Billed as “Super Fight II,”
+the match went the distance of 12 rounds and ultimately led to a unanimous decision in
+favor of Ali.
+Win - Unanimous Decision in 12 rounds [New York City]
+                    </li>
+                    <li>
+                        <strong>1974 - </strong>
+                        <strong>ALI VS. GEORGE FOREMAN – RUMBLE IN THE JUNGLE</strong><br>
+                        A showdown in Zaire (now Democratic Republic of the
+Congo) to reclaim Ali's heavyweight title puts him against
+Foreman, the imposing favorite. Ali employs his
+“rope-a-dope” tactic: leaning on the ropes, Ali absorbs
+body blows until Foreman finally wears himself out. The
+fight held cultural impact for the people of Zaire, who
+connected with Ali, as well as the millions who watched the
+fight around the world.
+Win - Knockout in 8 rounds [Kinshasa, Zaire]
+                    </li>
+                    <li>
+                        <strong>1978 - </strong>
+                        <strong>CAMPAIGNS AGAINST APARTHEID</strong>
+                        Ali appears at the United Nations for a press conference with the Chairman of the UN
+Special Committee against Apartheid. He addresses the committee with a message of
+peace and spirituality.
+                    </li>
+                    <li>
+                        <strong>1981</strong>
+                        <strong>ALI VS. TREVOR BERBICK – DRAMA IN BAHAMA</strong>
+                        In the 61st and final fight of his career, Muhammad Ali begins the bout trying to look like
+his former self, but by the sixth round, he began to tire. After Berbick was declared winner,
+Ali officially retired.
+Loss - Unanimous Decision in 10 rounds [Nassau, Bahamas]
+
+
+                    </li>
+                    <li>
+                        <strong>1984</strong>
+                        <strong>DIAGNOSED WITH PARKINSON’S DISEASE</strong><br>
+                        Since retiring, Ali's health had intensely deteriorated. After checking himself into New
+York’s Columbia Presbyterian Hospital, Ali is diagnosed with Parkinson's disease, a brain
+disorder that leads to shaking, stiffness, difficulty walking, and loss of balance and
+coordination.
+                    </li>
+                    <li>
+                        <strong>1986 - </strong>
+                        <strong>
+                            MARRIES YOLANDA "LONNIE" WILLIAMS</strong><br>
+                            After many years of friendship, Lonnie and Muhammad were married in a small ceremony
+at the home of then Louisville Mayor Harvey Sloane.
+                    </li>
+                    <li>
+                        <strong>1990 - </strong>
+                        <strong>NEGOTIATES RELEASE OF 15 U.S. HOSTAGES IN IRAQ</strong><br>
+                        Despite warnings, Ali travels to Baghdad, Iraq to negotiate
+the release of 15 United States hostages taken during the
+Kuwait invasion. Ali meets with Saddam Hussein for nearly
+an hour and successfully secures the hostages’ release.
+                    </li>
+                    <li>
+                        <strong>1993 - </strong>
+                        <strong>MEETS NELSON MANDELA</strong><br>
+                        Ali travels to South Africa for two weeks to support the development of boxing. The visit
+includes his first meeting with Nelson Mandela—who was a boxer as a young man.
+                    </li>
+                    <li>
+                        <strong>1996 - </strong>
+                        <strong>LIGHTS THE SUMMER OLYMPIC CAULDRON</strong><br>
+                        In an opening ceremony surprise, with undisguised
+challenges holding the torch and yet focused and precise,
+Ali lights the Olympic cauldron in a moment that captivates
+3.5 billion worldwide viewers.
+                    </li>
+                    <li>
+                        <strong>1998 - </strong>
+                        <strong>NAMED U.N. MESSENGER OF PEACE</strong><br>
+                        Ali’s 1978 address to the Special Committee against Apartheid, along with his own belief
+in sport’s power to create unity, inspires Secretary-General Kofi Annan to name Ali as one
+of his first messengers of peace.
+                    </li>
+                    <li>
+                        <strong>2001 - </strong>
+                        <strong>VISITS GROUND ZERO AFTER 9/11</strong><br>
+                        Days after the devastating attacks of September 11, Ali
+travels to Ground Zero to thank first responders and share
+a message of peace in the face of xenophobia and Islamic
+extremist terrorism.
+                    </li>
+                    <li>
+                        <strong>2005 - </strong>
+                        <strong>RECEIVES PRESIDENTIAL MEDAL OF FREEDOM</strong><br>
+                        President George W. Bush awards Ali with the highest civilian honor in the United States:
+“Across the world, billions of people know Muhammad Ali as a brave, compassionate and
+charming man, and the American people are proud to call Muhammad Ali one of our
+own.”
+                    </li>
+                    <li>
+                        <strong>2005 - </strong>
+                        <strong>MUHAMMAD ALI CENTER OPENS</strong><br>
+                        Despite Ali’s impact and fame around the world, Lonnie and Muhammad choose their
+beloved Louisville as home to a museum and education center for mobilizing
+Muhammad’s legacy of fostering respect, inspiring future changemakers, and advancing
+social justice.
+                    </li>
+                    <li>
+                        <strong>2013 - </strong>
+                        <strong>INAUGURAL MUHAMMAD ALI HUMANITARIAN AWARDS</strong><br>
+                        These annual awards honor and celebrate individuals who, like Muhammad Ali, have
+devoted their lives to peace and social justice, inspiring others to do great things in their
+communities. Inaugural honorees include President Jimmy Carter and Christina Aguilera.
+                    </li>
+                    <li>
+                        <strong>2016 - </strong>
+                        <strong>MUHAMMAD ALI PASSES AWAY</strong><br>
+                        Muhammad Ali passes away late in the evening in Scottsdale, Arizona due to respiratory
+complications. He was 74.
+                    </li>
                 </ul>
+                <p>Muhammad Ali brings to life one of the most indelible figures of the 20th century, a three-time heavyweight boxing champion who captivated millions of fans</p>
+                <h3>If you would like to know more about Muhammad Ali visit his 
+                    <a id="tribute-link" href="https://en.wikipedia.org/wiki/Muhammad_Ali" target="_blank">wikipedia Page</a>
+                </h3>
             </section>
         </main>
 
